Added in memory security and updated views

--- a/TaskPlanning/src/main/resources/templates/form.html
+++ b/TaskPlanning/src/main/resources/templates/form.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>WP Exam</title>
+    <title th:text="(${task} != null ? 'Edit task ' + ${task.getTitle()} : 'Add task')"></title>
 </head>
 <body>
-<!-- The form should submit to ProductsController.create or  ProductsController.update, depending on whether we are
-creating or editing a product -->
+
 <form th:action="(${task} != null ? '/tasks/update-task/' + ${task.getId()} : '/tasks/add-task')" th:method="POST">
     <div>
-        <label for="title">Title</label>
-        <input type="text"
-               id="title"
-               name="title"
-               th:value="(${task} != null ? ${task.getTitle()} : '')"
-               required>
+    <label for="title">Title</label>
+    <input type="text"
+           id="title"
+           name="title"
+           th:value="(${task} != null ? ${task.getTitle()} : '')"
+           required>
     </div>
+
     <div>
         <label for="description">Description</label>
         <input type="text"
@@ -27,18 +27,34 @@ creating or editing a product -->
         <label>Status</label><br/>
         <select id="status"
                 name="status">
-
-            <option th:each="status : ${statusList}"
+            <option th:value="0" th:text="${'Please Select'}"></option>
+            <option th:if="${task}!=null"
+                    th:selected="${task.getStatus()!=null && task.getStatus().name()==status.name()}"
+                    th:each="status : ${statusList}"
+                    th:value="${status.name()}"
+                    th:text="${status.name()}">
+            </option>
+            <option th:if="${task}==null"
+                    th:each="status : ${statusList}"
                     th:value="${status.name()}"
                     th:text="${status.name()}">
             </option>
         </select>
     </div>
+
     <div>
         <label for="userId">Users</label><br/>
         <select id="userId"
                 name="userId">
-            <option th:each="user : ${users}"
+            <option th:value="0" th:text="${'Please Select'}"></option>
+            <option th:if="${task}!=null  "
+                    th:selected="${task.getUser()!= null && task.getUser().getId()==user.getId()}"
+                    th:each="user : ${users}"
+                    th:value="${user.getId()}"
+                    th:text="${user.getName()} + ' ' + ${user.getSurname()}">
+            </option>
+            <option th:if="${task}==null"
+                    th:each="user : ${users}"
                     th:value="${user.getId()}"
                     th:text="${user.getName()} + ' ' + ${user.getSurname()}">
             </option>
@@ -49,23 +65,24 @@ creating or editing a product -->
         <label for="startTime">
             Start of task
         </label>
-        <input type="datetime-local" name="startTime" id="startTime">
+        <input type="datetime-local" name="startTime" id="startTime"
+               th:value="(${task}==null ? '' : ${task.getStartTime()})">
     </div>
 
     <div>
         <label for="endTime">
             Estimated end of task
         </label>
-        <input type="datetime-local" name="endTime" id="endTime">
+        <input type="datetime-local" name="endTime" id="endTime"
+               th:value="(${task}==null ? '' : ${task.getEndTime()})">
     </div>
 
     <button id="submit" type="submit">Submit</button>
-    <a id="back" href="/products" type="button" class="btn btn-primary">Back to products</a>
+    <a id="back" href="/tasks" type="button" class="btn btn-primary">Back to products</a>
 </form>
 
 <div>
     <ul id="nav">
-        <li><a href="/">Home</a></li>
         <li><a href="/login">Login</a></li>
         <li><a href="/logout">Logout</a></li>
     </ul>
