--- a/TaskPlanning/src/main/resources/templates/tasks.html
+++ b/TaskPlanning/src/main/resources/templates/tasks.html
@@ -4,7 +4,7 @@
     <title>Tasks</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous"/>
-    <link rel="stylesheet" href="../static/style.css"/>
+
     <style>
 
         div.container {
@@ -22,7 +22,7 @@
         <div th:if="${hasError}">
             <div style="color:red" th:text="${error}"></div>
         </div>
-        <table class="table table-striped">
+        <table class="table table-striped" id="tasksId">
             <thead class="thead-dark">
             <tr>
                 <th>Title</th>
