--- a/TaskPlanning/src/main/resources/templates/tasks.html
+++ b/TaskPlanning/src/main/resources/templates/tasks.html
@@ -17,6 +17,19 @@
 </head>
 <body>
 <div class="container">
+    <div class="row">
+        <form class="form-group">
+            <input type="hidden" name="tasksStatus" th:value="Independent">
+            <button type="submit" class="btn btn-success">Filter by non-dependent tasks</button>
+        </form>
+    </div>
+
+    <div class="row">
+        <form class="form-group">
+            <input type="hidden" name="tasksStatus" value="finished">
+            <button type="submit" class="btn btn-success">Filter dependent and finished tasks</button>
+        </form>
+    </div>
 
     <div class="row">
        <form class="form-group" th:method="post" th:action="@{'/tasks/userAndEstTimes'}">
