--- a/TaskPlanning/src/main/resources/templates/tasks.html
+++ b/TaskPlanning/src/main/resources/templates/tasks.html
@@ -8,7 +8,7 @@
     <style>
 
         div.container {
-            margin: 10% 10% 10% 20%;
+            margin: 10% 10% 10% 10%;
         }
         .logout {
             margin-left: 77%;
@@ -30,6 +30,20 @@
             <button type="submit" class="btn btn-success">Filter dependent and finished tasks</button>
         </form>
     </div>
+
+<!--    <div class="row">
+        <form class="form-group">
+            <input type="hidden" name="taskStartTime" th:value="withoutStartTime">
+            <button type="submit" class="btn btn-success">Filter tasks without start time</button>
+        </form>
+    </div>-->
+
+<!--    <div class="row">
+        <form class="form-group">
+            <input type="hidden" name="taskAssignee" th:value="withoutAssignee">
+            <button type="submit" class="btn btn-success">Filter tasks without assignee</button>
+        </form>
+    </div>-->
 
     <div class="row">
        <form class="form-group" th:method="post" th:action="@{'/tasks/userAndEstTimes'}">
